--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,10 @@
     />
   </head>
   <body>
-    <!-- -------------HEADER------------   -->
+
+
+    
+    <!-- -------------HEADER-------------->
 
     <section class="sub-header">
       <nav>
@@ -29,8 +32,10 @@
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="course.html">COURSE</a></li>
-            <li><a href="blog.html">BLOG</a></li>
+            
             <li><a href="contact.html">CONTACT</a></li>
+
+            <li><a href="blog.html">BLOG</a></li>
           </ul>
         </div>
         <i class="fa fa-bars" onclick="showMenu()"></i>
